deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auditd
  namespace: audit
  labels:
    app: auditd
    app.kubernetes.io/name: auditd
spec:
  type: ClusterIP
  selector:
    app: auditd
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
